<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_health"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michal.myapplication.HealthActivity"
    tools:showIn="@layout/activity_health"
    android:orientation="vertical">


    <TextView
        android:text="@string/healty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/healthTextView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/healthRadioGrup" >

        <RadioButton
            android:text="@string/healty_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/healthManRadioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/Diabets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/diabetsRadioButton"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/Fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fatRadioButton"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/type_diet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typDietTextView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typDietRadioGrup" >

        <RadioButton
            android:text="@string/H_carbo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carboHRadioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/L_carbo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carboLRadioButton"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/keto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ketoRadioButton"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/typ_diabets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typDiabetsTextView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typDiabetsRadioGrup" >

        <RadioButton
            android:text="@string/typ_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typOneRadioButton"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/typ_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typTwoRadioButton"
            android:layout_weight="1" />
    </RadioGroup>
</LinearLayout>
