<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michal.myapplication.PersonalActivity"
    tools:showIn="@layout/activity_personal"
    android:orientation="vertical">

    <TextView
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ageTextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ageSeekBar"
        android:max="120" />

    <TextView
        android:text="@string/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heightTextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heightSeekBar"
        android:max="220"/>

    <TextView
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightTextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weightSeekBar"
        android:max="200"/>

    <TextView
        android:text="@string/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sextextViewTextView"
        android:layout_marginTop="30sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sexRadioGrup"
        >

        <RadioButton
            android:text="@string/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/womanRadioButton"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manRadioButton"
            android:layout_weight="1" />
    </RadioGroup>
</LinearLayout>
