<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_product"
    android:layout_column="2"
    android:layout_row="10"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    >


    <TextView
        android:text="@string/name_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameProductTextView"
        android:layout_column="0"
        android:layout_row="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameProductEditText"
        android:layout_column="1"
        android:layout_row="0"/>

    <TextView
        android:text="@string/producent_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/producentTextView"
        android:layout_column="0"
        android:layout_row="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/producentEditText"
        android:layout_column="1"
        android:layout_row="1"/>

    <Spinner
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_column="0"
        android:layout_row="2"/>
<!--
    <TextView
        android:text="@string/typ_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typProductTextView"
        android:layout_column="0"
        android:layout_row="2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/typProductEditText"
        android:layout_column="1"
        android:layout_row="2"/>
        -->

    <TextView
        android:text="@string/kcal_100g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kcalProductTextView"
        android:layout_column="0"
        android:layout_row="3"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/kcalProductEditText"
        android:layout_column="1"
        android:layout_row="3"/>

    <TextView
        android:text="@string/ig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IGTextView"
        android:layout_column="0"
        android:layout_row="4"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/IGEditText"
        android:layout_column="1"
        android:layout_row="4"/>

    <TextView
        android:text="@string/ww_100g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/WWProductTextView"
        android:layout_column="0"
        android:layout_row="5"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/WWProductEditText"
        android:layout_column="1"
        android:layout_row="5"/>

    <TextView
        android:text="@string/b_100g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BProductTextView"
        android:layout_column="0"
        android:layout_row="6"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/BProductEditText"
        android:layout_column="1"
        android:layout_row="6"/>

    <TextView
        android:text="@string/t_100g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TProductTextView"
        android:layout_column="0"
        android:layout_row="7"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/TProductEditText"
        android:layout_column="1"
        android:layout_row="7"/>

    <TextView
        android:text="@string/ban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/banProductTextView"
        android:layout_column="0"
        android:layout_row="8"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/banProductEditText"
        android:layout_column="1"
        android:layout_row="8"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zdjęcie"
        android:layout_row="9"
        android:layout_column="0"
        android:onClick="takePhoto"
        android:id="@+id/takePhoto"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewAdd"
        android:layout_row="10"
        android:layout_column="0"/>


</GridLayout>