<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_aim_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michal.myapplication.AimMainActivity"
    tools:showIn="@layout/activity_aim_main"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aimRadioGrup">

        <RadioButton
            android:text="@string/reduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reductionRadioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/keep_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/keepRadioButton"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/build_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buildRadioButton"
            android:layout_weight="1" />
    </RadioGroup>
</LinearLayout>
